--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,3 +3,14 @@
     height:70px;
     width: 100%;
 }
+
+
+.riotfist{
+    width:50px;
+    height:50px;
+    margin:10px;
+}
+
+.riotfist:hover{
+    cursor:pointer;
+}
