--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -1,11 +1,13 @@
 .homeContainer{
     background-color:#D9D9D9 ;
+    height:92.3vh;
+    
 }
 .titleContainer{
     display: flex;
     justify-content: center; 
     align-items: center; 
-    margin-top: 45px;
+    padding-top: 45px;
     
 }
 
@@ -21,8 +23,6 @@
     margin-top: 140px;
 }
 
-
-
 .selection{
     width: 565px;
     height: 360px;
@@ -34,13 +34,18 @@
     cursor: pointer;
 }
 
-.leaguesImage{
+.leaguesImage, .worldsImage, .takeoverImage{
     width:565px;
     height:240px;
     border-radius: 20px;
 }
-.worldsImage{
-    width:565px;
-    height:240px;
-    border-radius: 20px;
+
+.featureText{
+    color: #fff;
+    font-family: "Montserrat";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    font-size: 20px;
 }
