--- a/src/pages/css/CustomRankings.css
+++ b/src/pages/css/CustomRankings.css
@@ -1,27 +1,33 @@
+.customRankingsContainer{
+    background-color:#D9D9D9  ;
+    height:180vh;
+}
+
 .titleContainer{
     display: flex;
     justify-content: center; 
     align-items: center; 
-    padding-top: 45px;
+    
     
 }
 
 .titleText{
     font-family: "Montserrat";
-    font-size: 40px;
+    font-size: 35px;
 }
 
 .teamFolderContainer{
-    margin:40px;
-    margin-top: 90px;
+    margin:5px;
+    margin-top: 60px;
+    width: 702px;
+    background-color: #161123;
+    height: 105vh;
     
+    margin-left:80px;
     
 }
 .teamFolder{
     background-color: #161123;
-    height:105px;
-    width: 702px;
-    border-radius: 20px;
-    margin-bottom: 20px;
-    margin-left: 160px;
+    height: 50px;
+    margin-left: 100px;
 }
