--- a/src/pages/css/CustomRankings.css
+++ b/src/pages/css/CustomRankings.css
@@ -1,33 +1,134 @@
 .customRankingsContainer{
     background-color:#D9D9D9  ;
-    height:180vh;
+    height:auto;
+    
+}
+.mainViewContainer{
+    display: flex;
+    
 }
 
 .titleContainer{
     display: flex;
     justify-content: center; 
     align-items: center; 
-    
-    
+    margin-bottom: 50px;
 }
 
-.titleText{
+.customTeamTitle{
     font-family: "Montserrat";
-    font-size: 35px;
+    font-size: 20px;
+}
+
+
+.teamFolderWindowContainer{
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 72vh;
+    width: 86vh;
+
+    /* This will change the width of the scrollbar */
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    /* This will change the background color of the scrollbar */
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+
+    /* This will change the color of the scroll thumb */
+    &::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+
+    /* This will change the color of the scroll thumb on hover */
+    &::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
 }
 
 .teamFolderContainer{
-    margin:5px;
-    margin-top: 60px;
-    width: 702px;
+   
+    margin-top: 10px;
+    width: 600px;
     background-color: #161123;
-    height: 105vh;
-    
-    margin-left:80px;
-    
+    height: 80px;
+    margin-left:100px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
+.teamFolderContainer:hover{
+    cursor: pointer;
+}
+
 .teamFolder{
     background-color: #161123;
     height: 50px;
     margin-left: 100px;
+   
+}
+.teamLogo{
+  
+    width:45px;
+    height: 45px;
+    padding:5px;
+    margin: 20px;
+    margin-left: 20px;
+}
+.teamName{
+    color: white;
+    font-family: "Montserrat";
+    font-size: 20px;
+}
+
+.expandedContent{
+    height: 100px;
+    background-color: #161123;
+    width: 560px;
+    margin-left:100px;
+    margin-top: -20px;
+    padding:20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.orderContainer{
+    height: 72vh;
+    width: 90vh;
+    margin-left: 20px;
+    background-color: #161123;
+    border-radius: 20px;
+    
+    padding-top:10px;
+}
+
+.orderButton{
+    width: 160px;
+    height: 72px;
+    background-color: #D9D9D9;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Montserrat";
+}
+.orderButton:hover{
+    cursor: pointer;
+}
+
+.orderHeader{
+    width: 90vh;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+}
+
+.orderMainContainer{
+    width: 90vh;
+    height:62vh;
+    background-color: #161123;
+    border-radius: 20px;
 }
