--- a/src/pages/css/CustomRankings.css
+++ b/src/pages/css/CustomRankings.css
@@ -5,7 +5,8 @@
 }
 .mainViewContainer{
     display: flex;
-    
+    justify-content: center; 
+    align-items: center;
 }
 
 .titleContainer{
@@ -16,8 +17,8 @@
 }
 
 .customTeamTitle{
-    font-family: "Montserrat";
-    font-size: 20px;
+    font-family: "Bebas Neue";
+    font-size: 50px;
 }
 
 
@@ -51,17 +52,19 @@
 .teamFolderContainer{
    
     margin-top: 10px;
-    width: 600px;
+    width: 700px;
+    margin-left: 10px;
     background-color: #161123;
     height: 80px;
-    margin-left:100px;
-    border-radius: 20px;
+   
+    border-radius: 10px;
     display: flex;
     align-items: center;
     position: relative;
 }
-.teamFolderContainer:hover{
+.folder:hover{
     cursor: pointer;
+    transform:scale(1.02);
 }
 
 .teamFolder{
@@ -84,22 +87,22 @@
 }
 
 .expandedContent{
-    height: 100px;
+    height: 200px;
     background-color: #161123;
-    width: 560px;
-    margin-left:100px;
+    width: 660px;
     margin-top: -20px;
     padding:20px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    margin-left: 10px;
 }
+
 
 .orderContainer{
     height: 72vh;
     width: 90vh;
     margin-left: 90px;
     background-color: #161123;
-    border-radius: 20px;
     padding-top:15px;
 }
 
@@ -107,7 +110,7 @@
     width: 130px;
     height: 32px;
     background-color: #D9D9D9;
-    border-radius: 20px;
+    border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -116,16 +119,19 @@
 }
 .orderButton:hover{
     cursor: pointer;
+    
 }
 
 .orderHeader{
     width: 90vh;
-    height: 8vh;
+    height:5vh;
     display: flex;
-    justify-content: center;
+  
+    border-bottom:solid 1px #262a2e;
 }
 
 .orderMainContainer{
+    margin-top: 20px;
     width: 90vh;
     height:62vh;
     background-color: #161123;
