--- a/src/pages/css/TournamentStandings.css
+++ b/src/pages/css/TournamentStandings.css
@@ -5,14 +5,15 @@
 }
 .standingsMain{
     display: flex;
-    flex-direction: row;
+    
+    justify-content: center;
 }
 .leftSide{
     display: flex;
     flex-direction: column;
     width: 40vh;
-    margin:20px;
-    margin-top: 60px;
+    margin-top: 50px;
+    
 }
 
 .textFont{
@@ -23,7 +24,7 @@
 
 .tournamentRegionCard{
     width: 300px;
-    height: 300px;
+    height: 350px;
     background-color: #161123;
     display: flex;
     align-items: center;
@@ -32,11 +33,12 @@
     flex-direction: column;
     color: white;
     font-family: "Montserrat";
+    margin-left: -30px;
     
 }
 .regionIcon{
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     margin-bottom: 20px;
 }
 
@@ -53,6 +55,7 @@
 .regionTitle{
     color: #9E9797;
     font-size: 13px;
+    margin-bottom: 15px;
 }
 .returnButtonContainer{
     width: 200px;
@@ -65,15 +68,17 @@
     border-radius: 20px;
     color: white;
     margin-top: 30px;
-    margin-left: 50px;
+    margin-left: 22px;
+    
     
 }
 .returnButtonContainer:hover{
     cursor: pointer;
+    transform:scale(1.15);
 }
 
 .yearContainer{
-    font-size: 40px;
+    font-size: 25px;
 }
 .arrow{
     margin-left:20px;
@@ -81,19 +86,70 @@
 }
 .arrow:hover{
     cursor: pointer;
+    transform:scale(1.45);
 }
 
-.rightSide{
-    width: 150vh;
-    height:auto;
+.standingsContainer{
+    width: 140vh;
+    height:80vh;
     background-color: #161123;
     margin-top: 60px;
-    border-radius: 20px;
+    margin-bottom: 40px;
+    display: flex;
 }
 
-.rightSideHeader{
-    width: 150vh;
-    height: 50px;
+.standingsHeader{
+    width: auto;
+    height: 55px;
+   
+    border-bottom:solid 1px #262a2e;
+    display: flex;
+    
     
 }
 
+
+.splitContainer{
+    font-size: 15px;
+}
+
+.leftSideWindow{
+    width: 130vh;
+    height:auto;
+    border-right: solid 1px;
+    color:#262a2e;
+}
+
+.rightSideWindow{
+    width: 150vh;
+    height:auto;
+   
+}
+.standingsWindow{
+    display: flex;
+    margin-top: 20px;
+    
+}
+.dropdownContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
+.dropdownContainer:hover{
+    cursor: pointer;
+}
+.dropdown{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    width: 160px;
+    height:30px;
+    background-color: white; 
+    font-family: "Montserrat";
+    font-size: 12px;
+    border-radius: 5px;
+}
+.leftSideStandingsHeader{
+    width: 53vh;
+}
