--- a/src/pages/css/CustomRankings.css
+++ b/src/pages/css/CustomRankings.css
@@ -49,7 +49,7 @@
     }
 }
 
-.teamFolderContainer{
+.leaguesFolderContainer{
    
     margin-top: 10px;
     width: 700px;
@@ -73,7 +73,7 @@
     margin-left: 100px;
    
 }
-.teamLogo{
+.leagueLogo{
     width:45px;
     height: 45px;
     padding:5px;
@@ -104,6 +104,7 @@
     margin-left: 90px;
     background-color: #161123;
     padding-top:15px;
+    
 }
 
 .orderButton{
@@ -126,7 +127,8 @@
     width: 90vh;
     height:5vh;
     display: flex;
-  
+    align-items: center;
+    justify-content: center;
     border-bottom:solid 1px #262a2e;
 }
 
@@ -157,6 +159,15 @@
     &::-webkit-scrollbar-thumb:hover {
         background: #555;
     }
+}
+
+.folderTeamName{
+    color: white;
+    font-family: "Montserrat";
+    font-size: 19px;
+}  
+.folderTeamName:hover{
+    font-size: 25px;
 }
 
 
