--- a/src/pages/css/TournamentStandings.css
+++ b/src/pages/css/TournamentStandings.css
@@ -101,10 +101,10 @@
 .standingsHeader{
     width: auto;
     height: 55px;
-   
+    
     border-bottom:solid 1px #262a2e;
     display: flex;
-    
+    margin-bottom: 30px;
     
 }
 
@@ -114,7 +114,7 @@
 }
 
 .leftSideWindow{
-    width: 130vh;
+    width: 140vh;
     height:auto;
     border-right: solid 1px;
     color:#262a2e;
@@ -128,7 +128,16 @@
 .standingsWindow{
     display: flex;
     margin-top: 20px;
-    
+    /* justify-content: center;
+    align-items: center;  */
+    height:73vh;
+  
+}
+.centerLoader{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+
 }
 .dropdownContainer{
     display: flex;
@@ -151,5 +160,5 @@
     border-radius: 5px;
 }
 .leftSideStandingsHeader{
-    width: 53vh;
+    width: 48vh;
 }
