--- a/src/components/Load.css
+++ b/src/components/Load.css
@@ -8,12 +8,12 @@
 }
 
 .riotLogo{
-    width: 120px;
-    height: 120px;
+    width: 110px;
+    height: 110px;
     position:relative;
     top:180px;
     left:55px;
- 
+    /* animation: punch 4s linear infinite; */
 }
 
 .loader {
@@ -31,3 +31,23 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+  @keyframes punch {
+    0% {
+      width: 100px;
+      height: 100px;
+      transform: scale(1);
+    }
+    50% {
+      width: 100px;
+      height: 100px;
+      transform: scale(1.3);
+    }
+    100% {
+      width: 100px;
+      height: 100px;
+      transform: scale(1);
+    }
+  }
+  
+  
