--- a/src/pages/css/GlobalRankings.css
+++ b/src/pages/css/GlobalRankings.css
@@ -1,4 +1,10 @@
 .globalRankingsPage{
     height: 100vh;
     background-color: #D9D9D9 ;
+
+}
+
+.globalRankingsStandingsContainer{
+    width:150vh;
+    margin-left: 230px;
 }
