--- a/src/pages/css/LandingPage.css
+++ b/src/pages/css/LandingPage.css
@@ -79,6 +79,17 @@
    
     
 }
+
+.loadingContainer{
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    z-index: 1;
+    transform: translate(235%, 120%);
+  
+   
+  
+}
 .buttonContainer:hover{
     cursor: pointer;
     transform: translate(-50%, 100%) scale(1.15);
@@ -92,4 +103,24 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+
+.loader{
+    
+    border: 0px solid #EAF0F6;
+    border-radius: 50%;
+    border-bottom: 5px solid #FF7A59;
+    width: 130px;
+    height: 130px;
+    
+}
+
+
+.riotLogo{
+    width: 70px;
+    height: 70px;
+    position:relative;
+    top:110px;
+    left:25px;
+    /* animation: punch 4s linear infinite; */
 }
