--- a/src/pages/css/CustomRankings.css
+++ b/src/pages/css/CustomRankings.css
@@ -110,7 +110,7 @@
 .orderButton{
     width: 130px;
     height: 32px;
-    background-color: #D9D9D9;
+    background-color: white;
     border-radius: 8px;
     display: flex;
     align-items: center;
@@ -121,6 +121,7 @@
 }
 .orderButton:hover{
     cursor: pointer;
+    transform: scale(1.1);
     
 }
 .dropDownLocation{
